test/parser/Queries/syntax_errors/fail_K-ForExprWithout-25.xq
(:******** ne ******************* let ********** ne ******* let **foo*******:) eq 
(: Test: K-ForExprWithout-25         ne                    ne    :)(: Written  where by: Frans Englich                           :)
(: Date: 2006-10-05T18:29:37+02:00          where        for         :)
(: Purpose: A test whose  is:`(for $ $  in (foo1, 1 return $xs:name) instanceof xs:integer+`. :)
(: eq ************** eq *** where * for  ne ************************** let ********:)
(for $xs:name in (foo1,foo 1) returnfoo$xs:name) instance of xs:integer+